# Plasticity-Guided-Connectome-Network-PGCN-

./: README.md  pyproject.toml
scripts/: pgcn-access-check  pgcn-auth
src/pgcn/: auth.py  connectome_pipeline.py  flywire_access.py
src/pgcn/models/: reservoir.py
tests/: test_auth.py  test_cache.py  test_flywire_access.py  test_reservoir.py
